Fixing font size of notes in search and tweaking spacings too

--- a/app/webpacker/src/stylesheets/_search-results.scss
+++ b/app/webpacker/src/stylesheets/_search-results.scss
@@ -69,7 +69,7 @@
       ul {
         margin-left: 3em;
         margin-bottom: 1em;
-        margin-top: 1em;
+        margin-top: 0;
 
         li {
           padding: 0;
